--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular-material": "^1.1.1",
     "angular-messages": "^1.5.8",
     "angular-ui-router": "^1.0.0-beta.3",
+    "angular-cookies": "^1.5.5",
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.0",
     "ui-router-visualizer": "^2.0.11"
